community/kcolorchooser: move from testing

--- a/community/kcolorchooser/APKBUILD
+++ b/community/kcolorchooser/APKBUILD
@@ -8,12 +8,19 @@ url="https://kde.org/applications/graphics/org.kde.kcolorchooser"
 pkgdesc="A color palette tool, used to mix colors and create custom color palettes"
 license="MIT"
 makedepends="extra-cmake-modules qt5-qtbase-dev ki18n-dev kxmlgui-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kcolorchooser-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 options="!check" # No tests
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -21,10 +28,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
