community/juk: move from testing

--- a/community/juk/APKBUILD
+++ b/community/juk/APKBUILD
@@ -2,17 +2,25 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=juk
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://juk.kde.org/"
 pkgdesc="A jukebox, tagger and music collection manager"
 license="GPL-2.0-or-later"
+depends="phonon-backend-gstreamer"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtsvg-dev kcoreaddons-dev kcompletion-dev kconfig-dev kcrash-dev kglobalaccel-dev ki18n-dev kiconthemes-dev kdoctools-dev kio-dev kjobwidgets-dev knotifications-dev ktextwidgets-dev kxmlgui-dev kwallet-dev kwidgetsaddons-dev kwindowsystem-dev phonon-dev taglib-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/juk-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -20,10 +28,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
