community/kwave: move from testing

--- a/community/kwave/APKBUILD
+++ b/community/kwave/APKBUILD
@@ -12,13 +12,21 @@ checkdepends="xvfb-run"
 source="https://download.kde.org/stable/release-service/$pkgver/src/kwave-$pkgver.tar.xz"
 subpackages="$pkgname-libs $pkgname-doc $pkgname-lang"
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
+	cd "$builddir"/build
+
 	if [ "$CARCH" = s390x ]; then
 		doc_opts="-DWITH_DOC=OFF"
 	else
 		doc_opts="-DWITH_DOC=ON"
 	fi
-	cmake \
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
@@ -29,10 +37,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
