community/kget: move from testing

--- a/community/kget/APKBUILD
+++ b/community/kget/APKBUILD
@@ -8,12 +8,19 @@ url="https://kde.org/applications/internet/org.kde.kget"
 pkgdesc="A versatile and user-friendly download manager"
 license="GPL-2.0-or-later AND LGPL-2.0-only AND GFDL-2.1-only"
 makedepends="extra-cmake-modules qt5-qtbase-dev kcompletion-dev kconfig-dev kconfigwidgets-dev kcoreaddons-dev kcrash-dev kdbusaddons-dev kdoctools-dev ki18n-dev kiconthemes-dev kitemviews-dev kcmutils-dev kio-dev knotifications-dev knotifyconfig-dev kparts-dev kservice-dev ktextwidgets-dev kwallet-dev kwidgetsaddons-dev kwindowsystem-dev kxmlgui-dev kitemmodels-dev kdelibs4support-dev plasma-workspace-dev sqlite-dev qca-dev gpgme-dev libktorrent-dev libmms-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kget-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -21,10 +28,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
