testing/svt-av1: enable x86
- Update URL

--- a/testing/svt-av1/APKBUILD
+++ b/testing/svt-av1/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=svt-av1
 pkgver=0.8.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Scalable Vector Technology for AV1 encoder (SVT-AV1 Encoder)"
-url="https://github.com/OpenVisualCloud/SVT-AV1"
-arch="x86_64"
+url="https://01.org/svt"
+arch="x86 x86_64"
 license="BSD-2-Clause-Patent"
 options="!check" # No test suite from upstream
 makedepends="cmake yasm"
