community/libktorrent: move from testing

--- a/community/libktorrent/APKBUILD
+++ b/community/libktorrent/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libktorrent
 pkgver=2.1.1
-_ktorrentver=5.1.2
+_ktorrentver=5.1.2 # $_ktorrentver=ktorrent-$pkgver
 pkgrel=0
 arch="all"
 url="https://kde.org/applications/internet/org.kde.ktorrent"
@@ -11,11 +11,18 @@ license="GPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev karchive-dev kcrash-dev ki18n-dev kio-dev solid-dev boost-dev gmp-dev qca-dev"
 makedepends="$depends_dev extra-cmake-modules doxygen graphviz"
 checkdepends="xvfb-run"
-source="https://download.kde.org/stable/ktorrent/$_ktorrentver/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/ktorrent/$_ktorrentver/libktorrent-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -24,11 +31,13 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	# utppolltest is broken
 	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest -E "utppolltest"
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 
 	mkdir -p "$pkgdir"/usr/share/doc
