community/phpmyadmin: upgrade to 5.0.0 & modernize

--- a/community/phpmyadmin/APKBUILD
+++ b/community/phpmyadmin/APKBUILD
@@ -2,12 +2,12 @@
 # Contributor: Matt Smith <mcs@darkregion.net>
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=phpmyadmin
-pkgver=4.9.2
+pkgver=5.0.0
 pkgrel=0
 pkgdesc="A Web-based PHP tool for administering MySQL"
 url="https://www.phpmyadmin.net/"
 arch="noarch"
-license="GPL-2.0 MIT BSD"
+license="GPL-2.0-only AND MIT AND BSD-2-Clause"
 depends="php7 php7-mysqli php7-bz2 php7-ctype php7-curl php7-gd php7-json
 	php7-mbstring php7-openssl php7-session php7-zip"
 makedepends="$depends_dev"
@@ -59,19 +59,18 @@ options="!check"  # tests require running MySQL
 #     - CVE-2016-9865
 #     - CVE-2016-9866
 
-_builddir="$srcdir"/$_fullpkgname
+builddir="$srcdir"/$_fullpkgname
 
 build() {
 	return 0
 }
 
 package() {
-	cd "$_builddir"
 	mkdir -p "$pkgdir"/usr/share/webapps/$pkgname \
 		"$pkgdir"/etc/$pkgname
 
 	# copy phpmyadmin
-	cp -r "$_builddir"/* "$pkgdir"/usr/share/webapps/$pkgname/
+	cp -r "$builddir"/* "$pkgdir"/usr/share/webapps/$pkgname/
 
 	# install the sample config
 	install -m660  \
@@ -91,7 +90,6 @@ package() {
 }
 
 doc() {
-	cd "$_builddir"
 	mkdir -p "$subpkgdir"/usr/share/doc/$pkgname
 
 	_docs="ChangeLog LICENSE README RELEASE-DATE-$pkgver"
@@ -101,5 +99,5 @@ doc() {
 	done
 }
 
-sha512sums="426689c31f963a9cbe34b2116888aa0264801aa5ef18fb0e4b89811b032d4018c770538e823bccb684fb066ed27fcf6dc6e0fb4198d1e082e7eea15595b67727  phpMyAdmin-4.9.2-all-languages.tar.xz
+sha512sums="7b29193a7376044d05a97f7cf3080c90db23433ba4de98e95dc1162ab740c4facd9a7b52816a9e65b23a72d908746d27ca4df008e752af7117fa89ff7af962c9  phpMyAdmin-5.0.0-all-languages.tar.xz
 ba5776800f5c7b6cbb4ae594ec77c4d3e0d0bd319d109c676bd6c969054967baef99cab1a30c2efa26487b2ec03ef9b81d035a4323003565cffb19b08fdce9f5  phpmyadmin.apache2.conf"
