community/perl-text-bibtex: modernize

--- a/community/perl-text-bibtex/APKBUILD
+++ b/community/perl-text-bibtex/APKBUILD
@@ -4,40 +4,36 @@
 pkgname=perl-text-bibtex
 _pkgreal=Text-BibTeX
 pkgver=0.88
-pkgrel=2
+pkgrel=3
 pkgdesc="Perl module for Text-BibTeX"
-url="http://search.cpan.org/dist/Text-BibTeX/"
+url="https://metacpan.org/release/Text-BibTeX"
 arch="all"
-license="GPL PerlArtistic"
-cpandepends=""
-cpanmakedepends="perl-module-build perl-config-autoconf perl-extutils-libbuilder perl-scalar-list-utils"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+cpanmakedepends="perl-module-build perl-config-autoconf perl-extutils-libbuilder
+	perl-scalar-list-utils"
+depends="perl"
 makedepends="perl-dev $cpanmakedepends"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/A/AM/AMBS/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/A/AM/AMBS/Text-BibTeX-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 	perl Build.PL installdirs=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	./Build
 }
 
 check() {
-        cd "$builddir"
-        ./Build test
+	./Build test
 }
 
 package() {
-    cd "$builddir"
-    ./Build install destdir="$pkgdir"
-    find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
+	./Build install destdir="$pkgdir"
+	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
 sha512sums="63425590feb479b43b70605144edad400650471ddefbc3dc40f5bd1b6c78e5e50eabaf60501e469de520e36221bebd1806eae8d45124b59feef9446fc3257d18  Text-BibTeX-0.88.tar.gz"
