main/perl-test-taint: modernize

--- a/main/perl-test-taint/APKBUILD
+++ b/main/perl-test-taint/APKBUILD
@@ -4,39 +4,34 @@
 pkgname=perl-test-taint
 _pkgreal=Test-Taint
 pkgver=1.08
-pkgrel=1
+pkgrel=2
 pkgdesc="Checks for taintedness of variables"
-url="http://search.cpan.org/dist/Test-Taint/"
+url="https://metacpan.org/release/Test-Taint"
 arch="all"
-license="GPL PerlArtistic"
-cpandepends=""
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 cpanmakedepends="perl-test-pod perl-test-pod-coverage"
-depends="$cpandepends"
+depends="perl"
 makedepends="perl-dev $cpanmakedepends"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/P/PE/PETDANCE/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/P/PE/PETDANCE/Test-Taint-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
