community/epiphany: enable tests

--- a/community/epiphany/APKBUILD
+++ b/community/epiphany/APKBUILD
@@ -4,7 +4,6 @@ pkgname=epiphany
 pkgver=3.34.2
 pkgrel=0
 pkgdesc="A simple, clean, beautiful view of the web"
-options="!check" # Location entry test fails on builders
 url="https://wiki.gnome.org/Apps/Web"
 arch="all !s390x" # libhandy is not available on s390x
 license="GPL-3.0-or-later"
@@ -28,7 +27,8 @@ build() {
 }
 
 check() {
-	xvfb-run ninja -C output test
+	# https://gitlab.gnome.org/GNOME/epiphany/issues/829
+	env PATH="$PATH:$builddir/output/src" xvfb-run ninja -C output test
 }
 
 package() {
