--- a/testing/mdcat/APKBUILD
+++ b/testing/mdcat/APKBUILD
@@ -15,6 +15,13 @@ builddir="$srcdir/mdcat-mdcat-$pkgver"
 export RUSTONIG_DYNAMIC_LIBONING=1
 
 build() {
+	# fails linking to libonig w/ stack protector
+	case "$CARCH" in
+		x86)
+			export CFLAGS="$CFLAGS -fno-stack-protector"
+			;;
+	esac
+
 	cargo build --release --locked
 }
 
