main/freetds: upgrade to 1.1.24 and modernize

--- a/main/freetds/APKBUILD
+++ b/main/freetds/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Michael Mason <ms13sp@gmail.com>
 pkgname=freetds
-pkgver=1.1.20
+pkgver=1.1.24
 pkgrel=0
 pkgdesc="Tabular Datastream Library"
 url="https://www.freetds.org"
 arch="all"
-license="GPL-2.0-or-later, LGPL-2.0-or-later"
+license="GPL-2.0-or-later OR LGPL-2.0-or-later"
 makedepends="openssl-dev linux-headers readline-dev unixodbc-dev"
-subpackages="$pkgname-doc $pkgname-dev"
+subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://www.freetds.org/files/stable/$pkgname-$pkgver.tar.bz2
 	fix-includes.patch
 	"
@@ -41,5 +41,5 @@ package() {
 	make -j1 DESTDIR="$pkgdir" install
 }
 
-sha512sums="5f81e779169dac59081e4482cd69f3140fd2534dbbfbf0034d3aec32e31ca36d0bd8fe75d3475f16a151de47980ab0a3c5688fb9f9b87da855bddd0cdb7195a3  freetds-1.1.20.tar.bz2
+sha512sums="7419a8f171ab50aeeb0cf0adc7f29c524dd5960a79249f89a52ec73b4cb843330d6c096aa71405cbe28bf568a8b7726f255955f74b3c12b5452d5b74715ecaa5  freetds-1.1.24.tar.bz2
 d75d1aab6687586697f3e430db1e82f21208f10076b45996542eea682e36cbbbb344f479a9336fcfd294b5b87d7acb2ec5fb8ddd1914e990e23dd5e7ae93a0b6  fix-includes.patch"
