--- a/community/wireguard-tools/APKBUILD
+++ b/community/wireguard-tools/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Stuart Cardall <developer@it-offshore.co.uk>
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=wireguard-tools
-pkgver=0.0.20191219
+pkgver=1.0.20200102
 pkgrel=0
 pkgdesc="Next generation secure network tunnel: userspace tools"
 arch="all"
@@ -19,25 +19,25 @@ subpackages="
 	$pkgname-wg-quick:_split:noarch
 	"
 options="!check"
-source="https://git.zx2c4.com/WireGuard/snapshot/WireGuard-$pkgver.tar.xz"
-builddir="$srcdir"/WireGuard-$pkgver
+source="https://git.zx2c4.com/wireguard-tools/snapshot/wireguard-tools-$pkgver.tar.xz"
+builddir="$srcdir"/wireguard-tools-$pkgver
 
 build() {
-	make -C src/tools
+	make -C src
 }
 
 package() {
 	mkdir -p "$pkgdir/usr/share/doc/$pkgname"
 
-	make -C src/tools \
+	make -C src \
 		DESTDIR="$pkgdir" \
 		WITH_BASHCOMPLETION=yes \
 		WITH_WGQUICK=yes \
 		WITH_SYSTEMDUNITS=no \
 		install
 
-	find "$builddir"/contrib/examples -name '.gitignore' -delete
-	cp -rf "$builddir"/contrib/examples "$pkgdir/usr/share/doc/$pkgname/"
+	find "$builddir"/contrib -name '.gitignore' -delete
+	cp -rf "$builddir"/contrib "$pkgdir/usr/share/doc/$pkgname/"
 }
 
 _split() {
@@ -59,4 +59,4 @@ bashcomp() {
 	mv "$pkgdir"/usr/share "$subpkgdir"/usr
 }
 
-sha512sums="0ff9f50e36378b2444f1cd670138e58676cee04f82dcc637d47aea69268034c950103609f7e35af14d7d1b0b579535000330737c2071f61b2d56147c95ef8e71  WireGuard-0.0.20191219.tar.xz"
+sha512sums="a4275eefc55b2a7ed3935a46a2098f9b0acdfaf0e1ed33ca42b51a186b388b53425ded5887e2cfc5be2802d6a453b8ebbf0294800ec1307a2dc21f46bd040da6  wireguard-tools-1.0.20200102.tar.xz"
