--- a/community/ffmpeg/APKBUILD
+++ b/community/ffmpeg/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ffmpeg
 pkgver=4.2.1
-pkgrel=3
+pkgrel=4
 pkgdesc="Complete and free Internet live audio and video broadcasting solution for Linux/Unix"
 url="https://ffmpeg.org/"
 arch="all"
@@ -14,7 +14,7 @@ subpackages="$pkgname-dev $pkgname-doc $pkgname-libs"
 makedepends="gnutls-dev lame-dev libvorbis-dev xvidcore-dev zlib-dev libvdpau-dev
 	imlib2-dev x264-dev libtheora-dev coreutils bzip2-dev perl-dev
 	libvpx-dev sdl2-dev libxfixes-dev libva-dev alsa-lib-dev
-	v4l-utils-dev yasm opus-dev x265-dev libass-dev"
+	v4l-utils-dev yasm opus-dev x265-dev libass-dev libssh-dev"
 checkdepends="rsync"
 source="https://ffmpeg.org/releases/ffmpeg-$pkgver.tar.xz
 	0001-libavutil-clean-up-unused-FF_SYMVER-macro.patch
@@ -103,6 +103,7 @@ build() {
 		--enable-pthreads \
 		--enable-shared \
 		--enable-libxcb \
+		--enable-libssh \
 		--disable-stripping \
 		--disable-static \
 		--disable-librtmp \
