--- a/testing/svt-av1/APKBUILD
+++ b/testing/svt-av1/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.8.0
 pkgrel=1
 pkgdesc="Scalable Vector Technology for AV1 encoder (SVT-AV1 Encoder)"
 url="https://01.org/svt"
-arch="x86 x86_64"
+arch="x86_64" # x86: inlining failed in call to always_inline '_mm_load_sd': target specific option mismatch
 license="BSD-2-Clause-Patent"
 options="!check" # No test suite from upstream
 makedepends="cmake yasm"
