testing/fennel: build fennelview in package
building fennelview in package allows pretty printing of tables in the fennel repl, without it lua tables are printed as pointers only.

--- a/testing/fennel/APKBUILD
+++ b/testing/fennel/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=fennel
 pkgver=0.3.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A Lua Lisp Language"
 url="https://fennel-lang.org"
 arch="all !s390x" #did not build on s390x CI
@@ -17,9 +17,13 @@ check() {
 	make test LUA="lua$_lua_version"
 }
 
+build() {
+	./fennel --compile fennelview.fnl > fennelview.lua
+}
+
 package() {
-	install -Dm644 "fennel.lua" "fennelview.fnl" \
-			-t "$pkgdir/usr/lib/lua$_lua_version/"
+	install -Dm644 "fennelview.lua" \
+			-t "$pkgdir/usr/share/lua/$_lua_version/"
 
 	install -Dm644 "fennel.lua" \
 			-t "$pkgdir/usr/bin/"
