testing/svt-hevc: disable on x86 due to 'error: incompatible type for argument 2 of '_mm_storel_epi64''

--- a/testing/svt-hevc/APKBUILD
+++ b/testing/svt-hevc/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.4.3
 pkgrel=0
 pkgdesc="Scalable Vector Technology for HEVC encoder (SVT-HEVC Encoder)"
 url="https://01.org/svt"
-arch="x86 x86_64"
+arch="x86_64" # x86 error: incompatible type for argument 2 of '_mm_storel_epi64'
 license="BSD-2-Clause-Patent"
 options="!check" # No test suite from upstream
 makedepends="cmake yasm"
