testing/svt-vp9: disable on x86 due to 'error: incompatible type for argument 2 of '_mm_storel_epi64''

--- a/testing/svt-vp9/APKBUILD
+++ b/testing/svt-vp9/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.1.0
 pkgrel=0
 pkgdesc="Scalable Vector Technology for VP9 encoder (SVT-VP9 Encoder)"
 url="https://01.org/svt"
-arch="x86 x86_64"
+arch="x86_64" #x86: error: incompatible type for argument 2 of '_mm_storel_epi64'
 license="BSD-2-Clause-Patent"
 options="!check" # No test suite from upstream
 makedepends="cmake yasm"
