--- a/testing/udftools/APKBUILD
+++ b/testing/udftools/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=udftools
-pkgver=2.1
+pkgver=2.2
 pkgrel=0
 arch="all"
 url="https://github.com/pali/udftools/"
 pkgdesc="Tools for UDF filesystems and DVD/CD-R(W) drives"
 license="GPL-2.0-or-later"
 makedepends="automake autoconf libtool eudev-dev linux-headers"
-source="https://github.com/pali/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/pali/udftools/releases/download/$pkgver/udftools-$pkgver.tar.gz"
 subpackages="$pkgname-doc"
 options="!check" # No tests
 
@@ -29,4 +29,4 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="0bdb3f2e0595200dadb771af4f31ba513d0bf6a0fbd30bc3a1f8aba4ab5f487f61635e65dc155926d2f566cb6e2b2f3a57938071616058cf703692d529971a64  udftools-2.1.tar.gz"
+sha512sums="1d6f7b725053ab8c2092ca07bce07fb075168ba48f7d2580076ee84b2652af3898622746c5a2f0bdb8c0d1d0e09d1f4a3cbaae4f998924652a56561b84690e2b  udftools-2.2.tar.gz"
