main/py3-imagesize: upgrade to 1.2.0
* Source tarball not yet available on github, switch to pypi.

--- a/main/py3-imagesize/APKBUILD
+++ b/main/py3-imagesize/APKBUILD
@@ -1,17 +1,16 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=py3-imagesize
-_pkgname=imagesize_py
-pkgver=1.1.0
-pkgrel=3
+pkgver=1.2.0
+pkgrel=0
 pkgdesc="Getting image size from png/jpeg/jpeg2000/gif file"
 url="https://github.com/shibukawa/imagesize_py"
 arch="noarch"
 license="MIT"
 depends="python3"
 makedepends="py3-setuptools"
-source="$pkgname-$pkgver.tar.gz::https://github.com/shibukawa/$_pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir/$_pkgname-$pkgver"
+source="https://files.pythonhosted.org/packages/source/i/imagesize/imagesize-$pkgver.tar.gz"
+builddir="$srcdir/imagesize-$pkgver"
 
 replaces="py-imagesize" # Backwards compatibility
 provides="py-imagesize=$pkgver-r$pkgrel" # Backwards compatibility
@@ -24,4 +23,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="b1df24020684e1265166a3909d391a36ecae742c2acf1302f22e0d2ec93c40d9af8d03ac02de0b8e32b95a7b0a4c7cc7c7591b0a8b2e9dbcae09d3af6093dc7e  py3-imagesize-1.1.0.tar.gz"
+sha512sums="c82a7fe433064c3a60ed664bad8ce4e602c527bcf2f7c9ab9be6ed650654626d9e0907028b2b0c5a484712bc989335b2b4f66494c8d445f5043ed4c2bc519700  imagesize-1.2.0.tar.gz"
