--- a/main/py3-imagesize/APKBUILD
+++ b/main/py3-imagesize/APKBUILD
@@ -9,6 +9,7 @@ arch="noarch"
 license="MIT"
 depends="python3"
 makedepends="py3-setuptools"
+checkdepends="py3-pytest"
 source="https://files.pythonhosted.org/packages/source/i/imagesize/imagesize-$pkgver.tar.gz"
 builddir="$srcdir/imagesize-$pkgver"
 
@@ -17,6 +18,10 @@ provides="py-imagesize=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
 	python3 setup.py build
+}
+
+check() {
+	py.test-3 test/test_get.py -v
 }
 
 package() {
