testing/libsigrok: upgrade to 0.5.2

--- a/testing/libsigrok/APKBUILD
+++ b/testing/libsigrok/APKBUILD
@@ -1,20 +1,27 @@
 # Maintainer: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
 
 pkgname=libsigrok
-pkgver=0.5.1
-pkgrel=2
+pkgver=0.5.2
+pkgrel=0
 pkgdesc="A C library providing access to logic analyzers and related file formats"
 url="https://sigrok.org/wiki/Libsigrok"
 makedepends="libzip-dev glib-dev libserialport-dev libusb-dev libftdi1-dev
 	glibmm-dev check-dev doxygen"
 arch="all"
 license="GPL-3.0-only"
-source="http://sigrok.org/download/source/$pkgname/$pkgname-$pkgver.tar.gz"
+source="http://sigrok.org/download/source/libsigrok/libsigrok-$pkgver.tar.gz"
 subpackages="$pkgname-dev"
 # Check fails in virtual environment (e.g. on the Alpine LXC build containers),
 # as libusb requires /dev/bus/usb be present/usable to be initialized. The
 # unit tests pass on a real hardware
 options="!check"
+
+prepare() {
+	default_prepare
+	sed -e "s|^Version:.*|Version: $pkgver|g" \
+		-i libsigrok.pc.in \
+		-i bindings/cxx/libsigrokcxx.pc.in
+}
 
 build() {
 	./configure --prefix=/usr --disable-static
@@ -32,4 +39,4 @@ package() {
 	cp contrib/61-libsigrok-plugdev.rules "$pkgdir/lib/udev/rules.d/60-libsigrok.rules"
 }
 
-sha512sums="48337fc4625dc0abc162ae54e04ce091047835aa1e49ba1ab84542805008d1ff5646b143fde57e317f3b34514c0e6d4dcb7b1c5944f3f16bdef1a7169edc3517  libsigrok-0.5.1.tar.gz"
+sha512sums="cf673dad6280302d69050c29490621f66c6d6a73932d019a53ec3501316d3f2e23e7667a04f866dbe6ed73f86a63de73d2173e2b6cea563631d705e06f887092  libsigrok-0.5.2.tar.gz"
