--- a/community/eyed3/APKBUILD
+++ b/community/eyed3/APKBUILD
@@ -1,5 +1,5 @@
 # Maintainer: prspkt <prspkt@protonmail.com>
-pkgname=py3-eyed3
+pkgname=eyed3
 _pkgname=eyeD3
 pkgver=0.8.12
 pkgrel=0
@@ -7,12 +7,13 @@ pkgdesc="ID3 tag editor in Python"
 url="https://eyed3.nicfit.net/"
 arch="noarch"
 license="GPL-3.0-or-later"
-replaces="py-eyed3" # for backwards compatibility
-provides="py-eyed3=$pkgver-r$pkgrel" # for backwards compatibility
 depends="python3 py3-magic py3-six"
-makedepends="py3-setuptools python3-dev"
+makedepends="py3-setuptools"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
+
+replaces="py-eyed3 py3-eyed3" # for backwards compatibility
+provides="py-eyed3=$pkgver-r$pkgrel py3-eyed3=$pkgver-r$pkgrel" # for backwards compatibility
 
 build() {
 	python3 setup.py build
