testing/supertuxkart: use GLES2 renderer on ARM

--- a/testing/supertuxkart/APKBUILD
+++ b/testing/supertuxkart/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=supertuxkart
 pkgver=1.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://supertuxkart.net/"
 pkgdesc="Kart racing game featuring Tux and his friends"
@@ -22,11 +22,18 @@ prepare() {
 
 build() {
 	cd "$builddir"/build
+
+	case "$CARCH" in
+		arm*|aarch64) GLES2_RENDERER=ON ;;
+		* ) GLES2_RENDERER=OFF ;;
+	esac
+
 	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
-		-DBUILD_RECORDER=0
+		-DBUILD_RECORDER=0 \
+		-DUSE_GLES2=$GLES2_RENDERER
 	make
 }
 
