testing/firefox: disable rust-simd on armhf/armv7, not available on these arches

--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -154,6 +154,11 @@ build() {
 			;;
 	esac
 
+	case "$CARCH" in
+		armhf|armv7) ;;
+		*) _rust_simd="--enable-rust-simd" ;;
+	esac
+
 	../configure \
 		--prefix=/usr \
 		$_arch_config \
@@ -174,8 +179,8 @@ build() {
 		--enable-system-ffi \
 		--enable-system-sqlite \
 		--enable-ffmpeg \
+		$_rust_simd
 		--enable-hardening \
-		--enable-rust-simd \
 		--with-system-bz2 \
 		--with-system-icu \
 		--with-system-libevent \
