testing/firefox: fix typo; add comment explaining why SIMD is disabled.

--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -154,8 +154,9 @@ build() {
 			;;
 	esac
 
+	# FF doesn't have SIMD available on these arches.
 	case "$CARCH" in
-		armhf|armv7) ;;
+		armhf|armv7) _rust_simd="--disable-rust-simd" ;;
 		*) _rust_simd="--enable-rust-simd" ;;
 	esac
 
@@ -179,7 +180,7 @@ build() {
 		--enable-system-ffi \
 		--enable-system-sqlite \
 		--enable-ffmpeg \
-		$_rust_simd
+		$_rust_simd \
 		--enable-hardening \
 		--with-system-bz2 \
 		--with-system-icu \
