testing/k3s: fix pkgdesc typo

--- a/testing/k3s/APKBUILD
+++ b/testing/k3s/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=k3s
 pkgver=1.0.1
 pkgrel=0
-pkgdesc="Lightweigt Kubernetes. 5 less than k8s."
+pkgdesc="Lightweight Kubernetes. 5 less than k8s."
 url="https://k3s.io"
 arch="all"
 license="Apache-2.0"
