testing/k3s: add missing dependencies

--- a/testing/k3s/APKBUILD
+++ b/testing/k3s/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=k3s
 pkgver=1.0.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Lightweight Kubernetes. 5 less than k8s."
 url="https://k3s.io"
 arch="all"
 license="Apache-2.0"
 options="chmod-clean !check" # No test suite from upstream
-depends="containerd"
+depends="cni-plugins conntrack-tools containerd coreutils findutils ipset"
 makedepends="go linux-headers"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/rancher/k3s/archive/v$pkgver.tar.gz
