testing/xmrig: upgrade to 5.5.0
- Ref https://github.com/xmrig/xmrig/releases
- Update URL

--- a/testing/xmrig/APKBUILD
+++ b/testing/xmrig/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=xmrig
-pkgver=5.4.0
+pkgver=5.5.0
 pkgrel=0
 pkgdesc="XMRig is a high performance Monero (XMR) miner"
-url="https://github.com/xmrig/xmrig"
+url="https://xmrig.com/"
 arch="all !s390x !ppc64le !aarch64" # gets stuck on aarch64 builder
 license="GPL-3.0-or-later"
 options="!check" # No test suite from upstream
@@ -31,4 +31,4 @@ package() {
 	install -Dm 644 -t "$pkgdir"/usr/share/doc/$pkgname/ README.md
 }
 
-sha512sums="61fea183d8757efd65dd67a9ecbab2d45191ab5b37b013b99d9f71cb8d6ece1dd6416366841d58f67d6b5c3a71b20104216a5268129ffab899a0ccc7158ab7d8  xmrig-5.4.0.tar.gz"
+sha512sums="d7964e25fe3a7d96fb037b559b75a54e1d0a620de80353f7d2d54efef434c02f4dffc1fb54c9ff5e4e0f77008421e3db35f301760fdd54b89d2c337925c1dc90  xmrig-5.5.0.tar.gz"
