testing/xmrig-proxy: upgrade to 5.5.0
- Ref https://github.com/xmrig/xmrig-proxy/releases
- Update URL

--- a/testing/xmrig-proxy/APKBUILD
+++ b/testing/xmrig-proxy/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 
 pkgname=xmrig-proxy
-pkgver=5.4.0
+pkgver=5.5.0
 pkgrel=0
 pkgdesc="XMRig Proxy is a high performance Monero (XMR) Stratum protocol proxy"
-url="https://github.com/xmrig/xmrig-proxy"
+url="https://xmrig.com/xmrig-proxy"
 arch="all"
 license="GPL-3.0-or-later"
 options="!check" # No test suite from upstream
@@ -26,4 +26,4 @@ package() {
 	install -Dm 644 -t "$pkgdir"/usr/share/doc/$pkgname/ README.md
 }
 
-sha512sums="ce3ccfc6e6b3ada5eb4e98d16953e1ed1357b46f0107b0d3ea6e88a20b8a4a2ae93601ba163f8ed5efa1434d20687ac69f6e5ecd1c80857663aefd005a9fd3d0  xmrig-proxy-5.4.0.tar.gz"
+sha512sums="01cfded2301e034c4d3d4674813de9ddd7cd225480527bd8b069a2dfeaa61e1f64ab88c470f3ebeacfab2d27395ba4c4c52a9f9cf602df8ca7bc7bed07c6f569  xmrig-proxy-5.5.0.tar.gz"
