testing/firefox: disable debugging on 32-bit to lower mem usage on builders
Right now rustc is trying to allocate more than 4GB on these arches, which fails
for obivous reasons.

--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -156,7 +156,15 @@ build() {
 
 	# FF doesn't have SIMD available on these arches.
 	case "$CARCH" in
-		armhf|armv7) _rust_simd="--disable-rust-simd" ;;
+		armhf|armv7)
+			_rust_simd="--disable-rust-simd"
+			_low_mem_flags="--disable-debug-symbols --disable-debug"
+			export RUSTFLAGS="$RUSTFLAGS -C debuginfo=0"
+		;;
+		x86)
+			_low_mem_flags="--disable-debug-symbols --disable-debug"
+			export RUSTFLAGS="$RUSTFLAGS -C debuginfo=0"
+		;;
 		*) _rust_simd="--enable-rust-simd" ;;
 	esac
 
@@ -181,6 +189,7 @@ build() {
 		--enable-system-sqlite \
 		--enable-ffmpeg \
 		$_rust_simd \
+		$_low_mem_flags \
 		--enable-hardening \
 		--with-system-bz2 \
 		--with-system-icu \
