--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -14,7 +14,7 @@ makedepends="
 	bsd-compat-headers
 	bzip2-dev
 	cargo
-	cbindgen~0.9.1
+	cbindgen
 	clang-dev
 	dbus-glib-dev
 	ffmpeg-dev
@@ -63,6 +63,7 @@ source="https://ftp.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-$pkg
 	fix-sandbox-membarrier.patch
 	rust_audio-thread-priority.patch
 	fd6847c9416f9eebde636e21d794d25d1be8791d.patch
+	firefox-71.0-bug1602358-fix-older-builds-with-newer-cbindgen.patch
 
 	x86_64-alpine-linux-musl.json
 	firefox.desktop
@@ -273,6 +274,7 @@ d35cacb9ede80e6bfbef0709823e536dddfb1c02d776275b0b7adb5969e9927d8c6117df96873569
 f85f2c19c3dafab915bcb40e580fc442fd9eab5916696849edf0b105c758dd807dfe23a6479935613c81496711eb377c73227c03eb8582204c3442a4d0e397a2  fix-sandbox-membarrier.patch
 18098bae18ce9ead6bca0d93d28e634495fa08a4c0707057f72a9e34205a64a0ce5ab98a4cfc2d492412725b14447eb9553b2976d9620c3d71eba2135c6ba211  rust_audio-thread-priority.patch
 60845dcb034b2c4459c30f7d5f25c8176cf42df794e2cc0e86c3e2abb6541c24b962f3a16ca70a288d4d6f377b68d00b2904b22463108559612053d835d9bff1  fd6847c9416f9eebde636e21d794d25d1be8791d.patch
+5fa62e873a8481b9f0299efef01be494997a01937d54ff1ecab486c5a227dba8d5f5efe0d988fc92446eafaa354e067ce2e2d8c0b40e490cef1c06d30cde4690  firefox-71.0-bug1602358-fix-older-builds-with-newer-cbindgen.patch
 0dfa633abf3f411c90a030c46ee7f8fdde6fdd9f3a0c493599a58633e09b183d6c04590fc1984256e514c1da4f72f43dde3f5dbceef888b08262952b4f894919  x86_64-alpine-linux-musl.json
 f3b7c3e804ce04731012a46cb9e9a6b0769e3772aef9c0a4a8c7520b030fdf6cd703d5e9ff49275f14b7d738fe82a0a4fde3bc3219dff7225d5db0e274987454  firefox.desktop
 5dcb6288d0444a8a471d669bbaf61cdb1433663eff38b72ee5e980843f5fc07d0d60c91627a2c1159215d0ad77ae3f115dcc5fdfe87e64ca704b641aceaa44ed  firefox-safe.desktop"
