testing/logwatch: upgrade to 7.5.2

--- a/testing/logwatch/APKBUILD
+++ b/testing/logwatch/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=logwatch
-pkgver=7.4.3
+pkgver=7.5.2
 pkgrel=0
 pkgdesc="A customizable, pluggable log-monitoring system"
 url="http://www.logwatch.org"
@@ -9,11 +9,8 @@ arch="noarch"
 license="custom"
 options="!check"
 depends="perl"
-depends_dev=
-makedepends=
-install=
 subpackages="$pkgname-doc"
-source="https://downloads.sourceforge.net/project/$pkgname/$pkgname-$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://downloads.sourceforge.net/project/logwatch/logwatch-$pkgver/logwatch-$pkgver.tar.gz"
 
 package() {
 	cd "$srcdir"/$pkgname-$pkgver
@@ -49,4 +46,4 @@ package() {
 	install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
 
-sha512sums="716d87238f487010f2bdf230fc66c16f3c3fe769e6bef04b0e7881c6b0563e1a4b4741235b8a40a16ab21d3803562e87e6bcf5cfbd0ace42414f1d1feae7a13a  logwatch-7.4.3.tar.gz"
+sha512sums="157486143ba12167f6c50c778372a4295db3744878607bceba8e0813357651bffd8924ef5ef41a4fbd20811c020dcc031eb354a0f52b8eb6d9aac197087c2bc5  logwatch-7.5.2.tar.gz"
