--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,9 @@ build-aarch64:
 
 build-armv7:
   extends: .build
+  image:
+    name: alpinelinux/alpine-gitlab-ci:latest-v7
+    entrypoint: ["linux32", "sh", "-c"]
   artifacts:
     name: MR${CI_MERGE_REQUEST_ID}_armv7
   tags:
