ci: fix typo in armv7 image tag

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,7 +92,7 @@ build-aarch64:
 build-armv7:
   extends: .build
   image:
-    name: alpinelinux/alpine-gitlab-ci:latest-v7
+    name: alpinelinux/alpine-gitlab-ci:latest-armv7
     entrypoint: ["linux32", "sh", "-c"]
   artifacts:
     name: MR${CI_MERGE_REQUEST_ID}_armv7
