--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -5,7 +5,7 @@ pkgver=71.0
 pkgrel=1
 pkgdesc="Firefox web browser"
 url="https://www.firefox.com/"
-arch="all !s390" # limited by rust and cargo, build failure on armv7
+arch="all !s390x !armhf" # limited by rust and cargo, build failure on armhf due to wasm
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 makedepends="
 	alsa-lib-dev
