main/swig: upgrade to 4.0.1

--- a/main/swig/APKBUILD
+++ b/main/swig/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=swig
-pkgver=3.0.12
-pkgrel=5
+pkgver=4.0.1
+pkgrel=0
 pkgdesc="A compiler that makes it easy to integrate C and C++ code with scripting languages"
 url="http://www.swig.org/"
 arch="all"
@@ -10,12 +10,11 @@ depends="guile"
 makedepends="zlib-dev pcre-dev bison"
 checkdepends="boost-dev perl-dev python3-dev diffutils"
 subpackages="$pkgname-doc"
-source="https://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz
-	swig-3.0.12-Fix-generated-code-for-constant-expressions-containi.patch
+source="https://downloads.sourceforge.net/swig/swig-$pkgver.tar.gz
+	fix-test-sed-PATH.patch
 	"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -25,16 +24,18 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-	env PERL5LIB=. make check
+	(
+#	export PATH="/usr/bin:/bin:/usr/sbin:/sbin"
+	env
+	make -C CCache check
+	)
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	install -D -m644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 	install -D -m644 LICENSE-UNIVERSITIES "$pkgdir"/usr/share/licenses/$pkgname/LICENSE-UNIVERSITIES
 }
 
-sha512sums="5eaa2e06d8e4197fd02194051db1e518325dbb074a4c55a91099ad9c55193874f577764afc9029409a41bd520a95154095f26e33ef5add5c102bb2c1d98d33eb  swig-3.0.12.tar.gz
-0cde94a04a3f914f6e1ac79866d199981600c0f4be18b52d08194de96d524027c6572eacd5c1e155a9007fc34ed9dece27dbcb974874de072fb42bf564978cd0  swig-3.0.12-Fix-generated-code-for-constant-expressions-containi.patch"
+sha512sums="595ef01cb83adfa960ceed9c325a9429192549e8d1e9aa3ab35a4301512a61d82e2e89a8c7939c2a5a0811254ea1832a443bd387e11459eb2b0bafc563ad1308  swig-4.0.1.tar.gz
+62d6eecba01abe8ddd5a3b8a5512b57e63182b49d957bb81903c29dfccfaa62e75555dabc2c7b163afb8432328dd10e23bec0e3bf1d1d7622ec1119f5dab0a64  fix-test-sed-PATH.patch"
