community/gns3-server: fix #11028

--- a/community/gns3-server/APKBUILD
+++ b/community/gns3-server/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=gns3-server
 pkgver=2.2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="GNS3 network simulator. Server package."
 url="https://github.com/GNS3/gns3-server"
 arch="all"
 license="GPL-3.0-or-later"
-depends="busybox dynamips python3 
-	py3-aiohttp-gns3 py3-aiohttp-cors-gns3 
+depends="busybox dynamips python3
+	py3-aiohttp-gns3 py3-aiohttp-cors-gns3
 	py3-async-timeout-gns3 py3-jsonschema-gns3
 	py3-pytest py3-raven
 	py3-psutil-gns3 py3-jinja2
@@ -16,7 +16,8 @@ depends="busybox dynamips python3
 	py3-distro"
 makedepends="busybox-static py-setuptools python3-dev linux-headers"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/GNS3/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/GNS3/gns3-server/archive/v$pkgver.tar.gz
+	requirements.patch"
 
 build() {
 	# Upstream includes busybox binary for x86_64. We want to replace it by
@@ -38,15 +39,14 @@ package() {
 	cat >"$pkgdir"/usr/share/doc/$pkgname/README.alpine <<EOF
 gns3-server has several optional packages that must be installed manually for additional functionality:
 
-  apk add qemu
-  apk add wiresark
-  apk add ubridge
-  apk add cpulimit
-  apk add iouyap
-  apk add vpcs
-
+	apk add qemu
+	apk add wiresark
+	apk add ubridge
+	apk add cpulimit
+	apk add iouyap
+	apk add vpcs
 EOF
-
 }
 
-sha512sums="1e3a96ca1dc9bfe60e9856fd8cdcb1ae3591e18fe12c61c0f66bcb794a480a2c395bf529f874ef9a92fe954ddcd629fa4af8324247057badb1cffba2c0d80be8  gns3-server-2.2.3.tar.gz"
+sha512sums="1e3a96ca1dc9bfe60e9856fd8cdcb1ae3591e18fe12c61c0f66bcb794a480a2c395bf529f874ef9a92fe954ddcd629fa4af8324247057badb1cffba2c0d80be8  gns3-server-2.2.3.tar.gz
+cdc09d596f0773ec7b842859f836c4363f50fac5cf954f435b1f50957da9355b47c9dece347c599797d1a32aa31a272810c8e6b906c9e07c470090769f510146  requirements.patch"
