community/firejail: upgrade to 0.9.62

--- a/community/firejail/APKBUILD
+++ b/community/firejail/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Stuart Cardall <developer@it-offshore.co.uk>
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=firejail
-pkgver=0.9.60
-_extraver=
+pkgver=0.9.62
 pkgrel=0
 pkgdesc="Linux namespaces and seccomp-bpf sandbox"
 url="https://firejail.wordpress.com/"
@@ -13,8 +12,7 @@ makedepends="linux-headers"
 checkdepends="expect"
 options="suid"
 subpackages="$pkgname-doc $pkgname-bash-completion:bashcomp:noarch"
-source="$pkgname-$pkgver$_extraver.tar.gz::https://github.com/netblue30/$pkgname/archive/$pkgver$_extraver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver$_extraver"
+source="firejail-$pkgver$_extraver.tar.gz::https://github.com/netblue30/firejail/archive/$pkgver$_extraver.tar.gz"
 
 prepare() {
 	default_prepare
@@ -53,4 +51,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="cb3eeff2f77801b4593a719a6b63da09cdc6c7f96f8ea8ea1aaa7e8538b080421a284441c6e43ce036fdf8510e08a73816c58d22f0af048344b8752f4a02759a  firejail-0.9.60.tar.gz"
+sha512sums="dfdbfbffdcb9a239e071983035d57350440eb58d79bb4375bc1fe585471a260c8b090bea59ac939739ac3daddf296c041ab4cc47ebbf718b0c9deae47f16af9f  firejail-0.9.62.tar.gz"
