--- a/community/zabbix/APKBUILD
+++ b/community/zabbix/APKBUILD
@@ -18,15 +18,15 @@ _php_depends="$_php $_php-gd $_php-curl $_php-bcmath $_php-sockets
 	"
 makedepends="postgresql-dev curl-dev net-snmp-dev libevent-dev pcre-dev
 	sqlite-dev mariadb-connector-c-dev curl-dev openipmi-dev unixodbc-dev
-	libxml2-dev autoconf automake libssh2-dev gnutls-dev go
+	libxml2-dev autoconf automake libssh2-dev gnutls-dev
 	$_php_depends"
 install="$pkgname.pre-install"
 pkgusers="zabbix"
 pkggroups="zabbix"
 options="!check" # no tests available
-subpackages="$pkgname-doc $pkgname-agent $pkgname-agent2 $pkgname-pgsql $pkgname-mysql $pkgname-sqlite
+subpackages="$pkgname-doc $pkgname-agent $pkgname-pgsql $pkgname-mysql $pkgname-sqlite
 	$pkgname-webif::noarch $pkgname-utils $pkgname-setup::noarch
-	$pkgname-openrc $pkgname-agent-openrc:agent_openrc $pkgname-agent2-openrc:agent2_openrc"
+	$pkgname-openrc $pkgname-agent-openrc:agent_openrc"
 source="https://downloads.sourceforge.net/zabbix/zabbix-$pkgver.tar.gz
 	zabbix-server.initd
 	zabbix-server.confd
@@ -40,6 +40,16 @@ source="https://downloads.sourceforge.net/zabbix/zabbix-$pkgver.tar.gz
 	zabbix_server.conf.patch
 	zabbix_agent2.conf.patch
 	"
+
+# Agent2 does not build on x86 atm
+case $CARCH in
+x86|armhf|armv7)
+	_build_agent2=false;;
+*)
+	subpackages="$subpackages $pkgname-agent2 $pkgname-agent2-openrc:agent2_openrc"
+	makedepends="$makedepends go"
+	_build_agent2=true;;
+esac
 
 # security fixes:
 #   3.0.4-r0:
@@ -65,7 +75,6 @@ build() {
 			--mandir=/usr/share/man \
 			--infodir=/usr/share/info \
 			--enable-agent \
-			--enable-agent2 \
 			--enable-proxy \
 			--enable-ipv6 \
 			--with-net-snmp \
@@ -77,6 +86,10 @@ build() {
 			--with-gnutls
 			"
 
+	if $_build_agent2; then
+		_configure="$_configure --enable-agent2"
+	fi
+
 	export GOPATH="$builddir"
 	# pass --export-dynamic to the linker
 	# to make zabbix loadable modules work
@@ -87,11 +100,11 @@ build() {
 		cd "$srcdir"
 		msg "Building for $db"
 		cp -r "$pkgname-$pkgver" "$pkgname-$pkgver-$db"
-	cd "$builddir-$db"
+		cd "$builddir-$db"
 		case $db in
 			sqlite3)
 				./configure \
-					--build=$CBUILD	\
+					--build=$CBUILD \
 					--host=$CHOST \
 					--with-$db \
 					$_configure
@@ -111,7 +124,11 @@ build() {
 
 package() {
 	# doing manual install
-	components="agentd proxy server agent2";
+	components="agentd proxy server";
+	if $_build_agent2; then
+		msg "Packaging agent2"
+		components="$components agent2"
+	fi
 
 	for i in $components; do
 		install -D -m755 "$builddir"/man/zabbix_$i.man \
