testing/bazel: disable strip

--- a/testing/bazel/APKBUILD
+++ b/testing/bazel/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=bazel
 pkgver=2.0.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A fast, scalable, multi-language and extensible build system"
 url="https://bazel.build"
 arch="x86_64"
 license="Apache-2.0"
 depends="libarchive zip unzip"
-# openjdk8 is a must, python3 is a must
 makedepends="bash openjdk8 python3 linux-headers protobuf"
+options="!strip"
 subpackages="
 	$pkgname-doc
 	$pkgname-zsh-completion:zshcomp:noarch
