main/smartmontools: upgrade to 7.1

--- a/main/smartmontools/APKBUILD
+++ b/main/smartmontools/APKBUILD
@@ -1,22 +1,19 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=smartmontools
-pkgver=7.0
+pkgver=7.1
 pkgrel=0
 pkgdesc="Control and monitor S.M.A.R.T. enabled hard drives"
 url="https://www.smartmontools.org/"
 arch="all"
-license="GPL-2.0+"
+license="GPL-2.0-or-later"
 makedepends="linux-headers"
 subpackages="$pkgname-doc $pkgname-openrc"
-source="https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz
+source="https://downloads.sourceforge.net/sourceforge/smartmontools/smartmontools-$pkgver.tar.gz
 	smartd.initd
 	smartd.confd
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
-
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -26,20 +23,16 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	make check
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir"/ install
 
 	install -Dm755 "$srcdir"/smartd.initd "$pkgdir"/etc/init.d/smartd
 	install -Dm644 "$srcdir"/smartd.confd "$pkgdir"/etc/conf.d/smartd
 }
 
-sha512sums="96e18a201182579f699d541539ce393e7bc2191e027cfdf7f87455a63da3a14451574f8fe391232047ac941ace453a017193d0a4987a4edb8f7ed9d5007f0512  smartmontools-7.0.tar.gz
+sha512sums="440b2a957da10d240a8ef0008bd3358b83adb9eaca0f8d3e049b25d56a139c61dcd0bb4b27898faef6f189a27e159bdca3331e52e445c0eebf35e5d930f9e295  smartmontools-7.1.tar.gz
 61cae548fc9f3a9fbea20d684502d3816e7b0b60fcf533ae4e1ab850725c208eb6ba5012ae154a46f0b7bb7285a9e63cbdecafed8db7fd63fda0ba59081260cc  smartd.initd
 ff45462944f01c0e7cac99443078b253dcbaed4f99ffab85052b12361d9eec4beec81cab334fbede9148b3dd503d5205add32ef4327a788f02a8b1e37f460437  smartd.confd"
