community/flatpak-builder: depend on elfutils for eu-strip
closes !1639

--- a/community/flatpak-builder/APKBUILD
+++ b/community/flatpak-builder/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=flatpak-builder
 pkgver=1.0.9
-pkgrel=1
+pkgrel=2
 pkgdesc="Tool to build flatpaks from source"
 options="!check" # Testsuite fails on tests that require FUSE
 url="https://flatpak.org"
 arch="all"
 license="LGPL-2.1-or-later"
-depends="flatpak git"
+depends="flatpak git elfutils"
 makedepends="flatpak-dev glib-dev libsoup-dev json-glib-dev
 	elfutils-dev libdwarf-dev libcap-dev curl-dev
 	yaml-dev libxslt docbook-xsl docbook-xml xmlto"
