testing/reprotest: remove superfluous make dependency

--- a/testing/reprotest/APKBUILD
+++ b/testing/reprotest/APKBUILD
@@ -9,7 +9,7 @@ url="https://salsa.debian.org/reproducible-builds/reprotest"
 arch="noarch"
 license="GPL-3.0-or-later"
 depends="python3"
-makedepends="make py3-setuptools py3-wheel"
+makedepends="py3-setuptools py3-wheel"
 _pypiprefix="${_pyname%${_pyname#?}}"
 source="https://files.pythonhosted.org/packages/source/$_pypiprefix/$_pyname/$_pyname-$pkgver.tar.gz"
 
