testing/bazel: add /etc/bazel.bazelrc

--- a/testing/bazel/APKBUILD
+++ b/testing/bazel/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=bazel
 pkgver=2.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A fast, scalable, multi-language and extensible build system"
 url="https://bazel.build"
 arch="x86_64"
@@ -26,6 +26,9 @@ build() {
 		bash ./compile.sh
 
 	./output/bazel shutdown
+
+	echo startup --server_javabase=$JAVA_HOME \
+		>> scripts/packages/bazel.bazelrc
 }
 
 check() {
@@ -43,6 +46,8 @@ check() {
 package() {
 	install -Dm755 ./scripts/packages/bazel.sh "$pkgdir"/usr/bin/bazel
 	install -Dm755 ./output/bazel "$pkgdir"/usr/bin/bazel-real
+	install -Dm755 ./scripts/packages/bazel.bazelrc \
+		"$pkgdir"/etc/bazel.bazelrc
 
 	install -m644 -D -t "$pkgdir"/usr/share/doc/$pkgname README.md
 }
