testing/charls: upgrade to 2.1.0

--- a/testing/charls/APKBUILD
+++ b/testing/charls/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Holger Jaekel <holger.jaekel@gmx.de>
 # Maintainer: Holger Jaekel <holger.jaekel@gmx.de>
 pkgname=charls
-pkgver=2.0.0
+pkgver=2.1.0
 pkgrel=0
 pkgdesc="An optimized implementation of the JPEG-LS standard for lossless and near-lossless image compression"
 url="https://github.com/team-charls/charls"
@@ -19,8 +19,8 @@ build() {
 	cmake . \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DBUILD_SHARED_LIBS=ON \
-		-DBUILD_TESTING=ON
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_SHARED_LIBS=ON
 	make
 }
 
@@ -30,6 +30,6 @@ package() {
 
 check() {
 	# The testprogram requires "Press any key + 'enter' to exit program"
-	echo "end\n" | ./charlstest -unittest
+	echo "end\n" | ./test/charlstest -unittest
 }
-sha512sums="0a2862fad6d65b941c81f5f838db1fdc6a4625887281ddbf27e21be9084f607d27c8a27d246d6252e08358b2ed4aa0c2b7407048ca559fb40e94313ca72487dd  charls-2.0.0.tar.gz"
+sha512sums="456539243d984ebe6afe1bbb7c9422e642cf0346d25d220126ad8a6d04e945c6c340ab3c2b73a7db4ec390ed6a52236e5c6e9ad6d14e8b78b701937810fb327d  charls-2.1.0.tar.gz"
