community/wavemon: upgrade to 0.9.1

--- a/community/wavemon/APKBUILD
+++ b/community/wavemon/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Francesco Colista <francesco.colista@gmail.com>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=wavemon
-pkgver=0.9.0
+pkgver=0.9.1
 pkgrel=0
 pkgdesc="Ncurses-based monitoring application for wireless network devices"
 url="https://github.com/uoaerg/wavemon"
@@ -10,9 +10,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="ncurses-dev libcap-dev libnl3-dev autoconf automake"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/uoaerg/$pkgname/archive/v$pkgver.tar.gz
-	use-atexit.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/uoaerg/wavemon/archive/v$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
@@ -41,5 +39,4 @@ package() {
 	mv "$pkgdir"/usr/share/$pkgname "$pkgdir"/usr/share/doc/
 }
 
-sha512sums="027e52c2096e36cdb34081b6accbb83943d0337da75d66de3ff61cc3a255faa2b129c2a8c9f72680fc9cd7a1bc9f837d52611b141d5855e01a82ff8e5739cd80  wavemon-0.9.0.tar.gz
-9d7edc6c1c2dc1f835c051c7fd4c6c2c71265c092e1a7be5f90107ddd6d75dc6af272af740b7bb84c92bde06c822c5bfbb2c100447245d8ca8eb261bf94cc98b  use-atexit.patch"
+sha512sums="c05e9ea488d3fb9bfdb15419aadc54bed08d338dba7c118d2a2ff6423ffe31c16ff8e9e05fc2e39fffb069f28fa7daef30f079ca63186064c0ade4f9fe98864c  wavemon-0.9.1.tar.gz"
