main/xen: add secinfo

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -145,6 +145,14 @@ options="!strip"
 #     - CVE-2019-11091  XSA-297
 #   4.12.1-r0:
 #     - CVE-????-?????  XSA-295
+#   4.13.0-r0:
+#     - CVE-2019-18425 XSA-298
+#     - CVE-2019-18421 XSA-299
+#     - CVE-2019-18423 XSA-301
+#     - CVE-2019-18424 XSA-302
+#     - CVE-2019-18422 XSA-303
+#     - CVE-2018-12207 XSA-304
+#     - CVE-2019-11135 XSA-305
 
 case "$CARCH" in
 x86*)
